# ChangeLog for dev-ruby/nora
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nora/Attic/ChangeLog,v 1.10 2007/03/15 10:06:44 tove Exp $

  14 Mar 2007; Tom Gall <tgall@gentoo.org> nora-0.0.20040310.ebuild:
  added ~ppc64

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> nora-0.0.20040310.ebuild:
  Mark 0.0.20040310 ~ia64

  17 Apr 2004; David Holm <dholm@gentoo.org> nora-0.0.20040310.ebuild:
  Added to ~ppc.

*nora-0.0.20040310 (10 Apr 2004)

  10 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> nora-0.0.20040222.ebuild,
  nora-0.0.20040310.ebuild:
  Version bumped. Marked previous version stable

*nora-0.0.20040222 (29 Feb 2004)

  29 Feb 2004; Mamoru KOMACHI <usata@gentoo.org> nora-0.0.20021204.ebuild,
  nora-0.0.20040222.ebuild, nora-20021204.ebuild:
  Version bumped and changed versioning according to upstream

*nora-0.0.20021204 (20 Sep 2003)

  20 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> nora-20021204.ebuild:
  Initial import
